gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: istio
  annotations:
    xnetworking.istio.io/service-type: NodePort
  labels:
    istio: ingressgateway
spec:
  gatewayClassName: istio
  listeners:
  - name: default
    port: 80
    protocol: HTTP
    hostname: "test.example.com"
    allowedRoutes:
      namespaces:
        from: All
