echo.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo
    istio: ingressgateway
spec:
  ports:
    - name: http-port
      port: 80
      targetPort: http-port
      protocol: TCP
  selector:
    app: echo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echo
    istio: ingressgateway
  name: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: docker.io/jmalloc/echo-server
          ports:
            - name: http-port
              containerPort: 8080
              protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: echo
  labels:
    app: echo
    istio: ingressgateway
spec:
  parentRefs:
    - name: istio
      namespace: istio-system
  hostnames: ["test.example.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
          method: GET
      backendRefs:
        - name: echo
          port: 80
